--- a/app/views/public/posts/edit.html.erb
+++ b/app/views/public/posts/edit.html.erb
@@ -6,56 +6,57 @@
 <!--        <%# end %>-->
 <!--      </ul>-->
 <!--    <%# end %>-->
-<div class='container'>
-  <div class='row'>
-    <div class="col-md-10 px-5 px-sm-0 mx-auto">
-      <h2 class="mt-4">投稿の編集</h2>
-      <%= form_with model: @post, local: true do |f| %>
-      <% if @post.image.attached? %>
-          <%= image_tag @post.image.variant(gravity: :center, resize:"200x200", crop:"640x640+0+0").processed, id: :image_prev %>
-        <% else %>
-          <%= image_tag "no_image", size: "100x100" %>
-        <% end %>
-
-
-      <div class="form-group mt-4">
-        <%= f.label :image, "画像の変更はこちら" %>
-        <%= f.file_field :image, id: :post_image, accept: "image/*" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :genre, "ジャンル" %>
-        <%= f.collection_select :genre_id, Genre.all, :id, :name, {prompt: "選択してください"}, {class: "new-wrapper__main__input-select"} %>
-      </div>
-      <div class="form-group">
-        <%= f.label :title, "タイトル" %>
-        <%= f.text_field :title, class: "form-control post_title" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :caption, "説明" %>
-        <%= f.text_area :caption, class: "form-control post_caption" %>
-      </div>
-      <div class="form-group">
-        <%= f.submit "保存", class: 'btn btn-success' %>
-      </div>
-      <% end %>
-
-      <script type="text/javascript">
-        $(function() {
-         function readURL(input) {
-           if (input.files && input.files[0]) {
-             var reader = new FileReader();
-             reader.onload = function (e) {
-               $('#image_prev').attr('src', e.target.result);
-             }
-             reader.readAsDataURL(input.files[0]);
-           }
-         }
-         $("#post_image").change(function(){
-           readURL(this);
-         });
-        });
-      </script>
-
+<div class="card text-dark text-center mt-4 mb-4 mx-auto" style="width: 35rem;">
+  <h2 class="mt-2 mb-2">
+    投稿の編集
+  </h2>
+  <div class="card card-img-top">
+    <% if @post.image.attached? %>
+      <%= image_tag @post.image, id: :image_prev %>
+    <% else %>
+      <%= image_tag "no_image", size: "100x100" %>
+    <% end %>
+    <svg class="card-img-top" width="100%" height="400"></svg>
+  </div>
+  <div class="card-body ml-2 mr-2">
+    <%= form_with model: @post, local: true do |f| %>
+    <div class="form-group mt-2">
+      <%= f.label :image, "画像の変更はこちら" %>
+      <%= f.file_field :image, id: :post_image, accept: "image/*" %>
     </div>
+    <div class="form-group">
+      <%= f.label :genre, "ジャンルの変更はこちら" %>
+      <%= f.collection_select :genre_id, Genre.all, :id, :name, {prompt: "選択してください"}, {class: "new-wrapper__main__input-select"} %>
+    </div>
+    <div class="form-group">
+      <%= f.label :title, "タイトル" %>
+      <%= f.text_field :title, class: "form-control post_title" %>
+    </div>
+    <div class="form-group">
+      <%= f.label :caption, "説明" %>
+      <%= f.text_area :caption, class: "form-control post_caption" %>
+    </div>
+    <div class="form-group">
+      <%= f.submit "保存", class: 'btn btn-success' %>
+    </div>
+    <% end %>
+
+    <script type="text/javascript">
+      $(function() {
+       function readURL(input) {
+         if (input.files && input.files[0]) {
+           var reader = new FileReader();
+           reader.onload = function (e) {
+             $('#image_prev').attr('src', e.target.result);
+           }
+           reader.readAsDataURL(input.files[0]);
+         }
+       }
+       $("#post_image").change(function(){
+         readURL(this);
+       });
+      });
+    </script>
+
   </div>
 </div>
