--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,3 +1,14 @@
-<div class="container">
-  top
-</div>
+<main>
+  <div class="container mt-5 px-4 px-lg-5 h-100">
+    <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
+        <div class="col-lg-8 align-self-end">
+            <h1 class="text-white font-weight-bold">Welcome to teracord!</h1>
+            <hr class="divider">
+        </div>
+        <div class="col-lg-8 align-self-baseline">
+            <p class="text-white-75 mb-5">Post your favorite photos and share your memories. Let's keep a record of the temple. And let's be healed by the pictures of the temple.</p>
+            <a class="btn btn-primary btn-xl" href="#about">Gest log in</a>
+        </div>
+    </div>
+  </div>
+  </main>
