--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container body text-center my-2">
+<div class="container body text-center my-2" id="indexModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
   <small class="text-light"><%= @posts.count %> in total</small>
   <ul class="index my-2">
     <% @posts.each do |post| %>
