--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -1,30 +1,44 @@
-<div class="container">
-  <div class="row mt-5">
-    <div class="col-md-10 mx-auto">
-      <div class="d-flex flex-wrap">
-        <%= @post.genre.name %></td>
-        <%= @post.title %>
-        <%= @user.name %>
-        <% if @post.image.attached? %>
-            <%= image_tag @post.image.variant(gravity: :center, resize:"200x200", crop:"640x640+0+0").processed %>
-          <% else %>
-            <%= image_tag "no_image", size: "100x100" %>
-        <% end %>
-          <%= link_to "削除", admin_post_path(@post.id), method: :delete, "data-confirm" => "本当に削除しますか？" %>
+<div class="card text-dark mt-4 mb-4 mx-auto" style="width: 35rem;">
+  <div class="card card-img-top">
+  <% if @post.image.attached? %>
+      <%= image_tag @post.image %>
+    <% else %>
+      <%= image_tag "no_image", size: "100x100" %>
+  <% end %>
+  <svg class="card-img-top" width="100%" height="400"></svg>
+    <div class="card-img-overlay">
+      <div class="float-left ml-2">
+      <button type="button" class="btn btn-light" disabled>
+        <%= @post.genre.name %>
+      </button>
       </div>
-      <%= @post.likes.count %> いいね
-      <div>
-        <p>コメント件数：<%= @post.comments.count %></p>
-        <% @post.comments.each do |comment| %>
-        <div class="d-flex flex-wrap">
-          <%= comment.user.name %>
-          <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.comment %>
-            <%= link_to "削除", admin_comment_path(comment), method: :delete %>
-
-        </div>
-        <% end %>
-      </div>
-      
     </div>
   </div>
+  <div class="card-header">
+    <button type="button" class="btn btn-outline-danger btn-sm">
+      <%= link_to "投稿の削除", admin_post_path(@post.id), method: :delete, "data-confirm" => "本当に削除しますか？" %>
+    </button>
+    <p><%= @post.title %></p>
+    <p><%= @post.caption %></p>
+  </div>
+  <div class="card-body">
+    <p class="card-text d-flex flex-wrap">
+      <% @post.comments.each do |comment| %>
+      <div class="col-12 clearfix">
+        <div class="comment-box"><%= comment.comment %>
+          <div class="float-right">
+            <small class="text-muted">
+            by<%= comment.user.name %>
+            <%= comment.created_at.strftime('%Y/%m/%d') %>
+            </small>
+            <button type="button" class="btn btn-outline-danger btn-sm">
+              <%= link_to "コメントの削除", admin_comment_path(comment), method: :delete %>
+            </button>
+          </div>
+        </div>
+      </div>
+      <% end %>
+    </p>
+  </div>
 </div>
+
