--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,7 +1,7 @@
 <div class="text-center">
   <div class='container mt-5 px-5 px-sm-0'>
     <h1>会員一覧</h1>
-    <table class='table table-hover table-inverse mt-5'>
+    <table class='table text-light table-hover table-inverse mt-5'>
       <thead>
         <tr>
           <th>ユーザーID</th>
