--- a/app/views/public/posts/search.html.erb
+++ b/app/views/public/posts/search.html.erb
@@ -1,29 +1,46 @@
-<div class="container">
-  <div class="row mt-5">
-    <div class="col-md-10 mx-auto">
-
-      <% if @searches == [] %>
-<h2 class = "seach-result">検索結果はありません</h2>
-<% else %>
-<h4>(検索結果　<%= @searches.count %>件)</h4>
-<div class = "post-contents">
-  <ul class = "post-list">
+<div class="container body text-center my-2">
+  <% if @searches == [] %>
+  <h2 class = "seach-result">検索結果はありません</h2>
+  <% else %>
+  <h4 class="text-light">検索結果　<%= @searches.count %>件</h4>
+  <% end %>
+  <ul class="index my-2">
     <% @searches.each do |post| %>
-    <%= link_to post_path(post.id) do %>
-          <%= post.genre.name %></td>
-          <%= post.title %>
-          <% if post.image.attached? %>
-            <%= image_tag post.image.variant(gravity: :center, resize:"200x200", crop:"640x640+0+0").processed %>
-          <% else %>
-            <%= image_tag "no_image", size: "100x100" %>
-          <% end %>
-          <%= post.comments.count %>コメント
-          <%= post.likes.count %> いいね
+    <li class="index_items">
+      <%= link_to post_path(post.id) do %>
+        <% if post.image.attached? %>
+          <%= image_tag post.image, size: "100x100" %>
+        <% else %>
+          <%= image_tag "no_image", size: "100x100" %>
         <% end %>
+        <div class="card-img-overlay text-light">
+          <div class="records">
+            <span class="fa-layers fa-fw mr-3" style="background:none">
+              <i class="fas fa-heart shadow" data-fa-transform="grow-12"></i>
+              <span class="fa-layers-text text-muted fa-inverse" data-fa-transform="grow-1" style="font-weight:700">
+                <%= post.likes.count %>
+              </span>
+            </span>
+            <span class="fa-layers fa-fw" style="background:none">
+              <i class="fas fa-comment shadow" data-fa-transform="grow-12"></i>
+              <span class="fa-layers-text text-muted fa-inverse" data-fa-transform="grow-1" style="font-weight:700">
+                <%= post.comments.count %>
+              </span>
+            </span>
+          </div>
+        </div>
       <% end %>
-      <% end %>
-</div>
-</div>
-  </div>
+    </li>
+    <% end %>
+  </ul>
 </div>
 
+<!-- ボタン・リンククリック後に表示される画面の内容 -->
+<%= render "form", post_new: @post_new %><!--＋Postボタン-->
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  
+      
+ 
