--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -6,21 +6,24 @@
       <%= image_tag "no_image", size: "100x100" %>
   <% end %>
   <svg class="card-img-top" width="100%" height="400"></svg>
-  <div class="card-img-overlay">
-    <div class="float-left ml-2">
-    <button type="button" class="btn btn-light" disabled>
-      <%= @post.genre.name %>
-    </button>
+    <div class="card-img-overlay">
+      <div class="float-left ml-2">
+      <button type="button" class="btn btn-light" disabled>
+        <%= @post.genre.name %>
+      </button>
+      </div>
+      
+      <div class="float-right mr-2">
+        <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#indexModal">
+          <% link_to posts_path %>一覧へ戻る</button>
+        <% if @post.user == current_user %>
+        <button type="button" class="btn btn-light btn-sm">
+          <% link_to edit_post_path(@post.id) %>編集</button>
+        <button type="button" class="btn btn-light btn-sm">
+          <% link_to post_path(@post.id), method: :delete, "data-confirm" => "本当に削除しますか？" %>削除</button>
+        <% end %>
+      </div>
     </div>
-    <div class="float-right mr-2">
-      <% if @post.user == current_user %>
-      <button type="button" class="btn btn-light btn-sm">
-        <% link_to edit_post_path(@post.id) %>編集</button>
-      <button type="button" class="btn btn-light btn-sm">
-        <% link_to post_path(@post.id), method: :delete, "data-confirm" => "本当に削除しますか？" %>削除</button>
-      <% end %>
-    </div>
-  </div>
   </div>
   <div class="card-header">
     <%= @post.title %>
@@ -41,32 +44,32 @@
       <small class="text-muted"><%= @post.created_at.strftime("%Y/%m/%d") %> by<%= @user.name %></small>
     </p>
     <p class="mt-2"><%= @post.caption %></p>
-    </div>
-    <div class="card-body">
-      <p class="card-text d-flex flex-wrap">
-        <% @post.comments.each do |comment| %>
-        <div class="col-12 clearfix">
-          <div class="comment-box"><%= comment.comment %>
-            <div class="float-right">
-              <small class="text-muted">
-              by<%= comment.user.name %>
-              <%= comment.created_at.strftime('%Y/%m/%d') %>
-              </small>
-              <button type="button" class="btn btn-outline-danger btn-sm">
-                <% if comment.user == current_user %>
-                  <%= link_to "削除", post_comment_path(comment.post, comment), method: :delete %>
-                <% end %>
-              </button>
-            </div>
+  </div>
+  <div class="card-body">
+    <p class="card-text d-flex flex-wrap">
+      <% @post.comments.each do |comment| %>
+      <div class="col-12 clearfix">
+        <div class="comment-box"><%= comment.comment %>
+          <div class="float-right">
+            <small class="text-muted">
+            by<%= comment.user.name %>
+            <%= comment.created_at.strftime('%Y/%m/%d') %>
+            </small>
+            <button type="button" class="btn btn-outline-danger btn-sm">
+              <% if comment.user == current_user %>
+                <%= link_to "削除", post_comment_path(comment.post, comment), method: :delete %>
+              <% end %>
+            </button>
           </div>
         </div>
-      <% end %>
-      </p>
-      <div class="text-center">
-        <%= form_with model: [@post, @comment] do |f| %>
-          <%= f.text_area :comment, rows: '4', cols: "50%", placeholder: "コメントをここに" %>
-          <%= f.submit "送信する" %>
-        <% end %>
       </div>
+    <% end %>
+    </p>
+    <div class="text-center">
+      <%= form_with model: [@post, @comment] do |f| %>
+        <%= f.text_area :comment, rows: '4', cols: "50%", placeholder: "コメントをここに" %>
+        <%= f.submit "送信する" %>
+      <% end %>
     </div>
   </div>
+</div>
