--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -20,7 +20,14 @@ body {
   color: #eeeeee;
   background-color:#313233;
 }
-// .main {
+
+.bg {
+  width: 100%;
+  height: 100vh;
+  background-image: url("../../assets/images/top.png");
+  background-size: cover;
+  }
+// .bg {
 //   background-image: url("top.png");
 //   background-size: cover;
 // }
@@ -70,6 +77,13 @@ img{
   margin: 10px auto;
   overflow-wrap:  break-word;
 }
+
+.comment-index{
+  width: 100%;
+  height: 100px;
+  overflow-y: auto;
+}
+
 //footer//
 footer{
     position: absolute;/*←絶対位置*/
