--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,5 +1,5 @@
-<main>
-  <div class="container mt-5 px-4 px-lg-5 h-100">
+<div class="bg">
+  <div class="container px-4 px-lg-5 h-100">
     <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-8 align-self-end">
             <h1 class="text-white font-weight-bold">Welcome to teracord!</h1>
@@ -11,4 +11,4 @@
         </div>
     </div>
   </div>
-  </main>
+</div>
