--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -12,6 +12,7 @@ span.mgr-10{
 li.nav-item{
   margin-right: 10px;
 }
+
 //body//
 .container{
   min-height: 100vh;
@@ -21,17 +22,72 @@ body {
   background-color:#313233;
 }
 
+//top//
+hr.style-one {
+    height: 12px;
+    border: 0;
+    box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.5);
+}
 .bg {
   width: 100%;
   height: 100vh;
   background-image: url("../../assets/images/top.png");
   background-size: cover;
+  position: relative;
   }
-// .bg {
-//   background-image: url("top.png");
-//   background-size: cover;
-// }
-//投稿一覧共通部分//
+  .bg::before {
+  content: '';
+    /*絶対配置でキラッと光るの位置を決める*/
+  position: absolute;
+  top: 0;
+  left: -75%;
+    /*キラッと光る形状*/
+    width: 50%;
+  height: 100%;
+  background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
+  transform: skewX(-25deg);
+}
+/*hoverした際の移動のアニメーション*/
+.bg:hover::before {
+  animation: shine 1.5s;
+}
+@keyframes shine {
+  100% {
+    left: 125%;
+  }
+}
+
+//about//
+.bg-about {
+  width: 100%;
+  height: 100vh;
+  background-image: url("../../assets/images/about.png");
+  background-size: cover;
+  position: relative;
+  }
+  .bg-about::before {
+  content: '';
+    /*絶対配置でキラッと光るの位置を決める*/
+  position: absolute;
+  top: 0;
+  left: -75%;
+    /*キラッと光る形状*/
+    width: 50%;
+  height: 100%;
+  background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
+  transform: skewX(-25deg);
+}
+/*hoverした際の移動のアニメーション*/
+.bg-about:hover::before {
+  animation: shine 1.5s;
+}
+@keyframes shine {
+  100% {
+    left: 125%;
+  }
+}
+
+//投稿一覧共通部分
 ul.index{
   display: flex;
   flex-wrap: wrap;
