--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-light p-4 shadow-sm" style="background:#ffffff">
   <div class="container-fluid">
-    <a class="navbar-brand ml-5" href="/">
-      <h4>
-        <span class="logo_area">
-          <strong>teracord</strong>
-        </span>
-      </h4>
-    </a>
+    <%= link_to about_path, class: "navbar-brand ml-5" do %>
+    <h4>
+      <span class="logo_area">
+        <strong>teracord</strong>
+      </span>
+    </h4>
+    <% end %>
     <span class="mgr-10">
       <% if user_signed_in? %>
       <%= current_user.name %>さん、teracordへようこそ！</br>
@@ -66,17 +66,23 @@
       </ul>
       <% else %>
       <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <%= link_to new_user_registration_path, class: "nav-link text-dark font-weight-bold" do %>
-            <i class="fas fa-user-plus"></i>
-            <span class="logo_area">新規登録</span>
-            <% end %>
-          </li>
-          <li class="nav-item">
-          <%= link_to new_user_session_path, class: "nav-link text-dark font-weight-bold" do %>
+        <li class="nav-item">
+        <%= link_to guest_sign_in_path, method: :post, class: "nav-link text-dark font-weight-bold" do %>
+          <i class="fas fa-users"></i>
+          <span class="logo_area">ゲストログイン</span>
+        <% end %>
+        </li>
+        <li class="nav-item">
+        <%= link_to new_user_registration_path, class: "nav-link text-dark font-weight-bold" do %>
+          <i class="fas fa-user-plus"></i>
+          <span class="logo_area">新規登録</span>
+        <% end %>
+        </li>
+        <li class="nav-item">
+        <%= link_to new_user_session_path, class: "nav-link text-dark font-weight-bold" do %>
           <i class="fas fa-sign-in-alt"></i>
-          <span class="logo_area">Log in</span>
-          <% end %>
+          <span class="logo_area">ログイン</span>
+        <% end %>
         </li>
       </ul>
       <% end %>
