--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -49,7 +49,7 @@ hr.style-one {
 }
 /*hoverした際の移動のアニメーション*/
 .bg:hover::before {
-  animation: shine 1.5s;
+  animation: shine 3.0s;
 }
 @keyframes shine {
   100% {
@@ -61,33 +61,48 @@ hr.style-one {
 .bg-about {
   width: 100%;
   height: 100vh;
-  background-image: url("../../assets/images/about.png");
+  background-image: url("../../assets/images/bg-about.png");
   background-size: cover;
   position: relative;
   }
-  .bg-about::before {
-  content: '';
-    /*絶対配置でキラッと光るの位置を決める*/
-  position: absolute;
-  top: 0;
-  left: -75%;
-    /*キラッと光る形状*/
-    width: 50%;
-  height: 100%;
-  background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
-  transform: skewX(-25deg);
-}
-/*hoverした際の移動のアニメーション*/
-.bg-about:hover::before {
-  animation: shine 1.5s;
-}
-@keyframes shine {
-  100% {
-    left: 125%;
+
+.fadeDown{
+  animation-name:fadeDownAnime;
+  animation-duration:3.0s;
+  animation-fill-mode:forwards;
+  opacity:0;
+  }
+
+  @keyframes fadeDownAnime{
+    from {
+      opacity: 0;
+    transform: translateY(-100px);
+    }
+
+  to {
+    opacity: 1;
+  transform: translateY(0);
   }
 }
 
+
 //投稿一覧共通部分
+.fadeIn{
+animation-name:fadeInAnime;
+animation-duration:3s;
+animation-fill-mode:forwards;
+opacity:0;
+}
+
+@keyframes fadeInAnime{
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
 ul.index{
   display: flex;
   flex-wrap: wrap;
@@ -126,6 +141,25 @@ img{
 }
 .shadow {
   text-shadow: 0 0 3px #313233;
+}
+//search//
+.fadeUp{
+animation-name:fadeUpAnime;
+animation-duration:3.0s;
+animation-fill-mode:forwards;
+opacity:0;
+}
+
+@keyframes fadeUpAnime{
+  from {
+    opacity: 0;
+  transform: translateY(100px);
+  }
+
+  to {
+    opacity: 1;
+  transform: translateY(0);
+  }
 }
 //show//
 .comment-box {
