--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,35 +1,36 @@
 <div class="container body text-center my-2" id="indexModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
-  <small class="text-light"><%= @posts.count %> in total</small>
-  
-  <ul class="index my-2">
-    <% @posts.each do |post| %>
-    <li class="index_items">
-      <%= link_to post_path(post.id) do %>
-        <% if post.image.attached? %>
-          <%= image_tag post.image, size: "100x100" %>
-        <% else %>
-          <%= image_tag "no_image", size: "100x100" %>
-        <% end %>
-        <div class="card-img-overlay text-light">
-          <div class="records">
-            <span class="fa-layers fa-fw mr-3" style="background:none">
-              <i class="fas fa-heart shadow" data-fa-transform="grow-12"></i>
-              <span class="fa-layers-text text-muted fa-inverse" data-fa-transform="grow-1" style="font-weight:700">
-                <%= post.likes.count %>
+  <div class="box fadeIn">
+    <small class="text-light"><%= @posts.count %> in total</small>
+    <ul class="index my-2">
+      <% @posts.each do |post| %>
+      <li class="index_items">
+        <%= link_to post_path(post.id) do %>
+          <% if post.image.attached? %>
+            <%= image_tag post.image, size: "100x100" %>
+          <% else %>
+            <%= image_tag "no_image", size: "100x100" %>
+          <% end %>
+          <div class="card-img-overlay text-light">
+            <div class="records">
+              <span class="fa-layers fa-fw mr-3" style="background:none">
+                <i class="fas fa-heart shadow" data-fa-transform="grow-12"></i>
+                <span class="fa-layers-text text-muted fa-inverse" data-fa-transform="grow-1" style="font-weight:700">
+                  <%= post.likes.count %>
+                </span>
               </span>
-            </span>
-            <span class="fa-layers fa-fw" style="background:none">
-              <i class="fas fa-comment shadow" data-fa-transform="grow-12"></i>
-              <span class="fa-layers-text text-muted fa-inverse" data-fa-transform="grow-1" style="font-weight:700">
-                <%= post.comments.count %>
+              <span class="fa-layers fa-fw" style="background:none">
+                <i class="fas fa-comment shadow" data-fa-transform="grow-12"></i>
+                <span class="fa-layers-text text-muted fa-inverse" data-fa-transform="grow-1" style="font-weight:700">
+                  <%= post.comments.count %>
+                </span>
               </span>
-            </span>
+            </div>
           </div>
-        </div>
+        <% end %>
+      </li>
       <% end %>
-    </li>
-    <% end %>
-  </ul>
+    </ul>
+  </div>
 </div>
 <!-- ボタン・リンククリック後に表示される画面の内容 -->
 <%= render "form", post_new: @post_new %><!--＋Postボタン-->
